force-app/main/default/objects/Subscriber_Detail__c/fields/Data_Amount__c.field-meta.xml
<CustomField>
    <fullName>Data_Amount__c</fullName>
    <label>Data Amount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>