force-app/main/default/objects/Subscriber_Detail__c/fields/Date_MSA_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_MSA_Signed__c</fullName>
    <label>Date MSA Signed</label>
    <type>Date</type>
</CustomField>