force-app/main/default/objects/Subscriber_Detail__c/fields/Parent_BAN__c.field-meta.xml
<CustomField>
    <fullName>Parent_BAN__c</fullName>
    <formula>Registered_Company_Name__r.Ban_Number__c</formula>
    <label>Parent BAN</label>
    <type>Text</type>
</CustomField>