force-app/main/default/objects/Subscriber_Detail__c/fields/Sub_BAN__c.field-meta.xml
<CustomField>
    <fullName>Sub_BAN__c</fullName>
    <externalId>true</externalId>
    <label>Sub BAN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>