force-app/main/default/objects/Subscriber_Detail__c/fields/Subscriber_State__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_State__c</fullName>
    <label>Subscriber State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Dunned</fullName>
            </value>
            <value>
                <fullName>In Arrears</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Promise to Pay</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Warned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>