force-app/main/default/objects/Subscriber_Detail__c/fields/Total_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Amount__c</fullName>
    <formula>Data_Amount__c  +  Voice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Plan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>