force-app/main/default/objects/Subscriber_Detail__c/fields/Voice_Plan__c.field-meta.xml
<CustomField>
    <fullName>Voice_Plan__c</fullName>
    <label>Voice Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>